--- a/daily tasks/9-12-2024.md
+++ b/daily tasks/9-12-2024.md
@@ -6,7 +6,7 @@ yesterday task : javascript
 today task: javascript
     1.1 : Arrays : completed
     1.2 : Objects: completed
-    1.3 : Introduction to JSON : yest to start
+    1.3 : Introduction to JSON : yet to start
 
  Day 3 task : advanced css- creating a portfolio- completed
 
